position alterado de absolute para fixed, para resolver problemas com overflow

--- a/main.css
+++ b/main.css
@@ -5,15 +5,24 @@
 }
 
 .popup {
-    position: absolute;
+    background-color: brown;
+    position: fixed;
     width: 25vw;
     height: 25vh;
     right: 0px;
     bottom: 0px;
-    background-color: brown;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    
     animation-name: up;
     animation-fill-mode: both;
     animation-timing-function: ease-in-out;
     animation-play-state: paused;
     animation-duration: 1s;
+}
+
+.texto {
+    margin: 20px;
+    color: aliceblue;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
